// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vuejs/core > vuejs/core 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/dist/",
      "**/temp/",
      "**/coverage/",
      ".idea/",
      "explorations/",
      "dts-build/packages",
    ],
    "plugins": [],
  },
  "warnings": [
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: import-x/no-nodejs-modules",
    "unsupported rule, but in development: @typescript-eslint/consistent-type-imports",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: import-x/no-nodejs-modules",
  ],
}
`;

exports[`vuejs/core upgrade > vuejs/core--upgrade 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "ignorePatterns": [
      "**/dist/",
      "**/temp/",
      "**/coverage/",
      ".idea/",
      "explorations/",
      "dts-build/packages",
    ],
  },
  "warnings": [
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: import-x/no-nodejs-modules",
    "unsupported rule, but in development: @typescript-eslint/consistent-type-imports",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: import-x/no-nodejs-modules",
  ],
}
`;
